--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "import/prefer-default-export": "off",
     "import/extensions": ["error", { "ts": "never" }],
     "class-methods-use-this": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "lines-between-class-members": "off"
   }
 }
