--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
